--- a/BreakPoint/BreakPoint/Base.lproj/Main.storyboard
+++ b/BreakPoint/BreakPoint/Base.lproj/Main.storyboard
@@ -85,6 +85,118 @@
             </objects>
             <point key="canvasLocation" x="749.60000000000002" y="-320.68965517241384"/>
         </scene>
+        <!--Me-->
+        <scene sceneID="2r6-DS-GPA">
+            <objects>
+                <viewController storyboardIdentifier="MeVC" id="rkj-4M-KyK" customClass="MeVC" customModule="BreakPoint" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jaN-4J-LkJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0lb-tM-LOa">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CF6-pG-dMI">
+                                        <rect key="frame" x="335" y="30" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="0R2-wf-hpk"/>
+                                            <constraint firstAttribute="height" constant="30" id="23z-gp-NEH"/>
+                                        </constraints>
+                                        <state key="normal" image="logoutIcon"/>
+                                        <connections>
+                                            <action selector="signOutButtonPressed:" destination="rkj-4M-KyK" eventType="touchUpInside" id="AlG-dd-YSj"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_me" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RDK-tV-qBE">
+                                        <rect key="frame" x="171" y="35.5" width="33" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="BgY-f5-vu9"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="18"/>
+                                        <color key="textColor" red="0.0" green="0.98106676339999999" blue="0.57369142770000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="RDK-tV-qBE" firstAttribute="centerX" secondItem="0lb-tM-LOa" secondAttribute="centerX" id="FaR-ec-vby"/>
+                                    <constraint firstAttribute="height" constant="70" id="NNI-sl-LaC"/>
+                                    <constraint firstItem="RDK-tV-qBE" firstAttribute="centerY" secondItem="CF6-pG-dMI" secondAttribute="centerY" id="bxT-5R-LlA"/>
+                                    <constraint firstItem="CF6-pG-dMI" firstAttribute="top" secondItem="0lb-tM-LOa" secondAttribute="top" constant="30" id="eIR-NM-uPc"/>
+                                    <constraint firstAttribute="trailing" secondItem="CF6-pG-dMI" secondAttribute="trailing" constant="10" id="uUC-xN-GH8"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9yD-p7-qzL">
+                                <rect key="frame" x="0.0" y="70" width="375" height="275"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfileImage" translatesAutoresizingMaskIntoConstraints="NO" id="akR-6w-MBl">
+                                        <rect key="frame" x="137" y="30" width="100" height="100"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="THm-dg-YmE"/>
+                                            <constraint firstAttribute="width" constant="100" id="xD4-Ie-7UB"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="testuser@mail.com" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yvi-Qt-lYW">
+                                        <rect key="frame" x="65" y="150" width="245" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="SpW-PG-OfT"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="18"/>
+                                        <color key="textColor" red="0.66422420739999999" green="0.66424006219999998" blue="0.66423153879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="Yvi-Qt-lYW" firstAttribute="leading" secondItem="9yD-p7-qzL" secondAttribute="leading" constant="65" id="ENg-V3-uO9"/>
+                                    <constraint firstAttribute="height" constant="275" id="JQM-tu-KsW"/>
+                                    <constraint firstAttribute="trailing" secondItem="Yvi-Qt-lYW" secondAttribute="trailing" constant="65" id="NVg-Uo-tkf"/>
+                                    <constraint firstItem="Yvi-Qt-lYW" firstAttribute="top" secondItem="akR-6w-MBl" secondAttribute="bottom" constant="20" id="WFw-4x-G1V"/>
+                                    <constraint firstItem="akR-6w-MBl" firstAttribute="top" secondItem="9yD-p7-qzL" secondAttribute="top" constant="30" id="aLX-zV-JFU"/>
+                                    <constraint firstItem="akR-6w-MBl" firstAttribute="centerX" secondItem="9yD-p7-qzL" secondAttribute="centerX" id="o82-e4-WBH"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PRo-1l-XIp">
+                                <rect key="frame" x="0.0" y="345" width="375" height="273"/>
+                                <color key="backgroundColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="50" id="8dO-zQ-StN">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8dO-zQ-StN" id="Kyv-2X-WNX">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="49.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="9yD-p7-qzL" firstAttribute="top" secondItem="0lb-tM-LOa" secondAttribute="bottom" id="1n5-1J-vgf"/>
+                            <constraint firstItem="9yD-p7-qzL" firstAttribute="leading" secondItem="1vb-Ax-gna" secondAttribute="leading" id="LJD-yV-2cA"/>
+                            <constraint firstItem="PRo-1l-XIp" firstAttribute="leading" secondItem="1vb-Ax-gna" secondAttribute="leading" id="ONd-RJ-oB7"/>
+                            <constraint firstItem="PRo-1l-XIp" firstAttribute="bottom" secondItem="1vb-Ax-gna" secondAttribute="bottom" id="OS1-7V-gpr"/>
+                            <constraint firstItem="9yD-p7-qzL" firstAttribute="trailing" secondItem="1vb-Ax-gna" secondAttribute="trailing" id="a69-YU-l3j"/>
+                            <constraint firstItem="0lb-tM-LOa" firstAttribute="top" secondItem="jaN-4J-LkJ" secondAttribute="top" id="eDe-5v-UET"/>
+                            <constraint firstItem="0lb-tM-LOa" firstAttribute="leading" secondItem="1vb-Ax-gna" secondAttribute="leading" id="ecY-pv-f08"/>
+                            <constraint firstItem="PRo-1l-XIp" firstAttribute="top" secondItem="9yD-p7-qzL" secondAttribute="bottom" id="gkI-hK-Hpe"/>
+                            <constraint firstItem="PRo-1l-XIp" firstAttribute="trailing" secondItem="1vb-Ax-gna" secondAttribute="trailing" id="oFV-TE-7Pd"/>
+                            <constraint firstItem="0lb-tM-LOa" firstAttribute="trailing" secondItem="1vb-Ax-gna" secondAttribute="trailing" id="vbB-W0-Yyp"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="1vb-Ax-gna"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Me" image="me-tabIcon" selectedImage="me-tabIcon" id="lQR-z7-gye"/>
+                    <connections>
+                        <outlet property="emailLabel" destination="Yvi-Qt-lYW" id="9l0-7g-QAv"/>
+                        <outlet property="profileImage" destination="akR-6w-MBl" id="bvY-ZW-WcU"/>
+                        <outlet property="tableView" destination="PRo-1l-XIp" id="wT8-U4-Ltb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gOf-UB-ZNU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1454" y="0.0"/>
+        </scene>
         <!--Groups-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
@@ -359,6 +471,7 @@
                     <connections>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
+                        <segue destination="rkj-4M-KyK" kind="relationship" relationship="viewControllers" id="pf1-rL-R7X"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -370,9 +483,12 @@
         <image name="addNewIcon" width="19" height="19"/>
         <image name="close" width="21" height="20"/>
         <image name="compose" width="21" height="24"/>
+        <image name="defaultProfileImage" width="102" height="102"/>
         <image name="emailIcon" width="25" height="16"/>
         <image name="feed-tabIcon" width="25" height="21"/>
         <image name="groups-tabIcon" width="25" height="23"/>
         <image name="loginBGImage" width="375" height="284"/>
+        <image name="logoutIcon" width="19" height="21"/>
+        <image name="me-tabIcon" width="25" height="25"/>
     </resources>
 </document>
