--- a/BreakPoint/BreakPoint/Base.lproj/Main.storyboard
+++ b/BreakPoint/BreakPoint/Base.lproj/Main.storyboard
@@ -28,6 +28,9 @@
                                             <constraint firstAttribute="height" constant="30" id="TQB-j9-Ukr"/>
                                         </constraints>
                                         <state key="normal" image="compose"/>
+                                        <connections>
+                                            <segue destination="SAq-3B-5fh" kind="presentation" id="HUR-QF-2Iw"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_feed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="war-qY-K4U">
                                         <rect key="frame" x="160.5" y="35" width="54.5" height="20"/>
@@ -196,6 +199,117 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gOf-UB-ZNU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1454" y="0.0"/>
+        </scene>
+        <!--Create PostVC-->
+        <scene sceneID="cg3-R6-4pe">
+            <objects>
+                <viewController storyboardIdentifier="CreatePostVC" id="SAq-3B-5fh" customClass="CreatePostVC" customModule="BreakPoint" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mop-O4-6FC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KPh-PQ-t1d">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_postsomething" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qrD-2b-q6N">
+                                        <rect key="frame" x="111.5" y="35" width="152" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="rjE-Do-LPv"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="18"/>
+                                        <color key="textColor" red="0.0" green="0.98106676339999999" blue="0.57369142770000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dTW-x2-lZp">
+                                        <rect key="frame" x="10" y="30" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="tyH-ts-vys"/>
+                                            <constraint firstAttribute="width" constant="30" id="vpZ-w2-wPc"/>
+                                        </constraints>
+                                        <state key="normal" image="close"/>
+                                        <connections>
+                                            <action selector="closeButtonPressed:" destination="SAq-3B-5fh" eventType="touchUpInside" id="AXL-eV-1eK"/>
+                                            <action selector="signOutButtonPressed:" destination="rkj-4M-KyK" eventType="touchUpInside" id="emI-NG-hQH"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="qrD-2b-q6N" firstAttribute="centerX" secondItem="KPh-PQ-t1d" secondAttribute="centerX" id="5yX-w7-Gye"/>
+                                    <constraint firstItem="dTW-x2-lZp" firstAttribute="leading" secondItem="KPh-PQ-t1d" secondAttribute="leading" constant="10" id="8Bt-fC-D60"/>
+                                    <constraint firstItem="qrD-2b-q6N" firstAttribute="centerY" secondItem="dTW-x2-lZp" secondAttribute="centerY" id="QTU-Ih-RQC"/>
+                                    <constraint firstItem="dTW-x2-lZp" firstAttribute="top" secondItem="KPh-PQ-t1d" secondAttribute="top" constant="30" id="jx5-IO-Ncq"/>
+                                    <constraint firstAttribute="height" constant="70" id="uw9-Dg-28b"/>
+                                </constraints>
+                            </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aev-ES-U1K">
+                                <rect key="frame" x="20" y="90" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="DHd-5b-VEl"/>
+                                    <constraint firstAttribute="width" constant="60" id="wMV-aF-qcb"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="testmail@mail.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jvj-hR-yOg">
+                                <rect key="frame" x="100" y="110.5" width="255" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="DLU-Wn-CqY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="18"/>
+                                <color key="textColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Say something here..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="3z9-ng-2xq">
+                                <rect key="frame" x="20" y="170" width="335" height="427"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ntx-Hr-CJa">
+                                <rect key="frame" x="0.0" y="617" width="371" height="50"/>
+                                <color key="backgroundColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="4aF-BS-7GU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="17"/>
+                                <state key="normal" title=" SEND" image="send">
+                                    <color key="titleColor" red="0.32156862745098042" green="0.74117647058823533" blue="0.35294117647058826" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="sendButtonPressed:" destination="SAq-3B-5fh" eventType="touchUpInside" id="G8A-JT-mh8"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="aev-ES-U1K" firstAttribute="top" secondItem="KPh-PQ-t1d" secondAttribute="bottom" constant="20" id="2ZG-Xt-29K"/>
+                            <constraint firstItem="3z9-ng-2xq" firstAttribute="leading" secondItem="Z1r-oy-jqB" secondAttribute="leading" constant="20" id="2cC-Nz-Bjl"/>
+                            <constraint firstItem="Jvj-hR-yOg" firstAttribute="leading" secondItem="aev-ES-U1K" secondAttribute="trailing" constant="20" id="8Sg-TN-6DT"/>
+                            <constraint firstItem="3z9-ng-2xq" firstAttribute="top" secondItem="aev-ES-U1K" secondAttribute="bottom" constant="20" id="Dx8-pC-4h6"/>
+                            <constraint firstItem="Ntx-Hr-CJa" firstAttribute="top" secondItem="3z9-ng-2xq" secondAttribute="bottom" constant="20" id="GNO-S7-OGe"/>
+                            <constraint firstItem="Ntx-Hr-CJa" firstAttribute="bottom" secondItem="Z1r-oy-jqB" secondAttribute="bottom" id="Gdo-dx-uIy"/>
+                            <constraint firstItem="Ntx-Hr-CJa" firstAttribute="leading" secondItem="Z1r-oy-jqB" secondAttribute="leading" id="HwJ-j0-eL7"/>
+                            <constraint firstItem="Z1r-oy-jqB" firstAttribute="trailing" secondItem="Jvj-hR-yOg" secondAttribute="trailing" constant="20" id="Sni-Hk-fB4"/>
+                            <constraint firstItem="aev-ES-U1K" firstAttribute="leading" secondItem="Z1r-oy-jqB" secondAttribute="leading" constant="20" id="Ub7-xe-Ajj"/>
+                            <constraint firstItem="Jvj-hR-yOg" firstAttribute="centerY" secondItem="aev-ES-U1K" secondAttribute="centerY" id="X8s-wd-Q1s"/>
+                            <constraint firstItem="KPh-PQ-t1d" firstAttribute="top" secondItem="mop-O4-6FC" secondAttribute="top" id="baY-lU-QRa"/>
+                            <constraint firstItem="Z1r-oy-jqB" firstAttribute="trailing" secondItem="3z9-ng-2xq" secondAttribute="trailing" constant="20" id="kv0-hb-2mp"/>
+                            <constraint firstItem="KPh-PQ-t1d" firstAttribute="leading" secondItem="Z1r-oy-jqB" secondAttribute="leading" id="n8h-9l-VeG"/>
+                            <constraint firstItem="KPh-PQ-t1d" firstAttribute="trailing" secondItem="Z1r-oy-jqB" secondAttribute="trailing" id="nDO-iw-NAm"/>
+                            <constraint firstItem="Z1r-oy-jqB" firstAttribute="trailing" secondItem="Ntx-Hr-CJa" secondAttribute="trailing" constant="4" id="vlw-Sa-NpA"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Z1r-oy-jqB"/>
+                    </view>
+                    <connections>
+                        <outlet property="emailLabel" destination="Jvj-hR-yOg" id="CVH-zs-PKC"/>
+                        <outlet property="profileImage" destination="aev-ES-U1K" id="Zfv-BN-xsk"/>
+                        <outlet property="sendButton" destination="Ntx-Hr-CJa" id="Je0-V2-BHr"/>
+                        <outlet property="textView" destination="3z9-ng-2xq" id="kxb-zb-TVT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cgg-ca-qRq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1453.5999999999999" y="-694.00299850074964"/>
         </scene>
         <!--Groups-->
         <scene sceneID="wg7-f3-ORb">
@@ -490,5 +604,6 @@
         <image name="loginBGImage" width="375" height="284"/>
         <image name="logoutIcon" width="19" height="21"/>
         <image name="me-tabIcon" width="25" height="25"/>
+        <image name="send" width="29" height="29"/>
     </resources>
 </document>
